# ebpf-samples

./: .gitmodules  CMakeLists.txt  README.md
asm/: badhelpercall.asm  badmapptr.asm  byteswap.asm  ctxoffset.asm  exposeptr.asm  exposeptr2.asm  loop.asm  map_in_map.asm  mapoverflow.asm  mapunderflow.asm  mapvalue-overrun.asm  nullmapref.asm  packet_access.asm  packet_overflow.asm  packet_reallocate.asm  packet_start_ok.asm  ringbuf_uninit.asm  stackok.asm  tail_call.asm  tail_call_bad.asm  twomaps.asm  twomaps_btf.asm  twostackvars.asm  twotypes.asm
invalid/: timeout-29db93548c671165313b314d4f83a3eefa24df37
json/: badhelpercall.json  badmapptr.json  badrelo.json  byteswap.json  ctxoffset.json  exposeptr.json  exposeptr2.json  loop.json  map_in_map.json  map_in_map_anonymous.json  map_in_map_typedef.json  mapoverflow.json  mapunderflow.json  mapvalue-overrun.json  nullmapref.json  packet_access.json  packet_overflow.json  packet_reallocate.json  packet_start_ok.json  prog_array.json  ringbuf_in_map.json  ringbuf_uninit.json  stackok.json  tail_call.json  tail_call_bad.json  twomaps.json  twomaps_btf.json  twostackvars.json  twotypes.json  wronghelper.json
src/: badhelpercall.c  badmapptr.c  badrelo.c  bounded_loop.c  bpf.h  bpf2bpf.c  byteswap.c  correlated_branch.c  correlated_branch2.c  ctxoffset.c  dependent_read.c  divzero.c  exposeptr.c  exposeptr2.c  externalfunction.c  global_variable.c  global_variable_2.c  infinite_loop.c  invalid_map_access.c  loop.c  map_in_map.c  map_in_map_anonymous.c  map_in_map_legacy.c  map_in_map_typedef.c  mapoverflow.c  mapunderflow.c  mapvalue-overrun.c  nullmapref.c  packet_access.c  packet_overflow.c  packet_reallocate.c  packet_start_ok.c  prog_array.c  ptr_arith.c  ringbuf_in_map.c  ringbuf_uninit.c  spectre_v1.c  spectre_v1_1.c  stackok.c  store_map_value_in_map.c  (+8 more)
